fix domain v7